--- a/JenkinsFile
+++ b/JenkinsFile
@@ -2,7 +2,7 @@ pipeline {
   agent {
     docker {
       image 'python:3.11-slim'
-      args '--network="host" --user root -v /var/run/docker.sock:/var/run/docker.sock'
+      args '--network="host" -v /var/run/docker.sock:/var/run/docker.sock'
     }
   }
 
