--- a/JenkinsFile
+++ b/JenkinsFile
@@ -13,6 +13,11 @@ pipeline {
           set -e
           ls -ltr
           cd fast-api-test-main
+          apt-get update \
+            && apt-get install -y --no-install-recommends \
+                build-essential \
+                libpq-dev \
+            && rm -rf /var/lib/apt/lists/*
           pip install -r requirements.txt
           uvicorn main:app --host 0.0.0.0 --port 8000 --reload
           exit 0
