--- a/JenkinsFile
+++ b/JenkinsFile
@@ -13,6 +13,8 @@ pipeline {
           set -e
           ls -ltr
           cd fast-api-test-main
+          python -m venv venv
+          source venv/bin/activate
           pip install --user --no-cache-dir -r requirements.txt
           uvicorn main:app --host 0.0.0.0 --port 8000 --reload
           exit 0
