--- a/JenkinsFile
+++ b/JenkinsFile
@@ -9,7 +9,7 @@ pipeline {
   stages {
     stage('Test') {
       steps {
-        sh '''
+        sh '''#!/bin/bash
           set -e
           ls -ltr
           cd fast-api-test-main
